update project dependencies and add support for assembly jar